--- a/index.html
+++ b/index.html
@@ -68,9 +68,9 @@
 </head>
 <body>
     <div>
-        <h1>THALIA💕</h1>
+        <h1>De parte de Chipana(◔◡◔)</h1>
         <h2>Tengo un regalo para ti✍(◔◡◔)</h2>
-        <button onclick="window.location.href='rosas.html'">Ver regalo☞💛</button>
+        <button onclick="window.location.href='rosas.html'">Ver regalo☞</button>
     </div>
 </body>
 </html>
