--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 </head>
 <body>
     <div>
-        <h1>De parte de Chipana(◔◡◔)</h1>
+        <h1>De parte de Mario(◔◡◔)</h1>
         <h2>Tengo un regalo para ti✍(◔◡◔)</h2>
         <button onclick="window.location.href='rosas.html'">Ver regalo☞</button>
     </div>
